--- a/index.html
+++ b/index.html
@@ -11,23 +11,31 @@
   </head>
   <body class="bg-gradient-to-b from-gray-900 to-gray-800 text-white font-sans">
     <!-- Navbar -->
-    <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
-      <h1 class="text-2xl font-bold text-pink-500">WaifuGacha</h1>
-      <div class="space-x-6">
-        <a href="#features" class="hover:text-pink-400">Features</a>
-        <a href="#invite" class="hover:text-pink-400">Invite</a>
-        <a href="#footer" class="hover:text-pink-400">Terms & Privacy</a>
+    <nav class="bg-gray-900/60 backdrop-blur-md fixed w-full z-20 top-0 left-0 border-b border-gray-700">
+      <div class="max-w-7xl mx-auto flex flex-wrap items-center justify-between p-4">
+        <a href="#" class="text-2xl font-bold text-pink-500">WaifuGacha</a>
+        <button id="menu-btn" class="inline-flex items-center p-2 w-10 h-10 justify-center text-gray-400 rounded-lg md:hidden hover:bg-gray-800 focus:outline-none" aria-expanded="false">
+          <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+          </svg>
+        </button>
+        <div class="hidden w-full md:flex md:w-auto" id="mobile-menu">
+          <ul class="flex flex-col mt-4 font-medium md:flex-row md:space-x-8 md:mt-0 text-center">
+            <li><a href="#features" class="block py-2 px-3 hover:text-pink-400">Features</a></li>
+            <li><a href="#invite" class="block py-2 px-3 hover:text-pink-400">Invite</a></li>
+            <li><a href="#footer" class="block py-2 px-3 hover:text-pink-400">Terms & Privacy</a></li>
+          </ul>
+        </div>
       </div>
     </nav>
 
     <!-- Hero -->
-    <section class="text-center py-20 px-6">
-      <h2 class="text-5xl font-bold mb-4">✨ Gacha Your Favorite Waifu & Husbando on Discord!</h2>
-      <p class="text-lg text-gray-300 mb-8 max-w-2xl mx-auto">Discover your favorite characters, collect them, and show off your collection! Try your luck now — directly on your Discord server.</p>
+    <section class="text-center pt-32 pb-20 px-6" id="invite">
+      <h2 class="text-4xl md:text-5xl font-bold mb-4">✨ Gacha Your Favorite Waifu & Husbando on Discord!</h2>
+      <p class="text-lg text-gray-300 mb-8 max-w-2xl mx-auto" id="features">Discover your favorite characters, collect them, and show off your collection! Try your luck now — directly on your Discord server.</p>
       <a
         href="https://discord.com/oauth2/authorize?client_id=1374750149049581578&permissions=2147567616&integration_type=0&scope=applications.commands+bot"
         class="bg-pink-500 hover:bg-pink-600 text-white font-semibold py-3 px-8 rounded-full text-lg transition duration-300"
-        id="invite"
         target="_blank"
       >
         🚀 Invite the Bot
@@ -35,9 +43,9 @@
     </section>
 
     <!-- Features -->
-    <section id="features" class="bg-gray-800 py-16 px-6">
+    <section class="bg-gray-800 py-16 px-6">
       <h3 class="text-3xl font-bold text-center mb-12">🎯 Why Choose WaifuGacha?</h3>
-      <div class="grid md:grid-cols-3 gap-10 max-w-5xl mx-auto">
+      <div class="grid sm:grid-cols-2 md:grid-cols-3 gap-10 max-w-5xl mx-auto">
         <div class="p-6 bg-gray-900 rounded-2xl shadow-lg hover:shadow-pink-500/30 transition">
           <h4 class="text-xl font-semibold mb-2">🔥 Rarity System</h4>
           <p class="text-gray-400">From Common to Legendary! Every gacha pull is full of surprises.</p>
@@ -63,6 +71,13 @@
 
     <!-- Script -->
     <script>
+      // Mobile navbar toggle
+      document.getElementById('menu-btn').addEventListener('click', () => {
+        const menu = document.getElementById('mobile-menu');
+        menu.classList.toggle('hidden');
+      });
+
+      // SweetAlert after clicking invite
       document.getElementById('invite').addEventListener('click', () => {
         setTimeout(() => {
           Swal.fire({
@@ -70,7 +85,7 @@
             html: `
               <p><strong>WaifuGacha Bot</strong> is an <span style="color:#10B981">OFFICIALLY VERIFIED</span> Discord application.</p>
               <p class="mt-2">Please choose which server you want to add the bot to by selecting it from the <strong>dropdown menu</strong> on Discord, then click <strong>Continue</strong> to finish the process.</p>
-              <p class="mt-3">💡 Once added, type <code>/gacha-help</code> to see all features, commands, and mechanics. Thank you for adding My bot into your Server's.</p>
+              <p class="mt-3">💡 Once added, type <code>/gacha-help</code> to see all features, commands, and mechanics.</p>
             `,
             icon: 'info',
             confirmButtonText: 'Got it!',
