--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
       >
         🚀 Invite the Bot
       </a>
+      <p class="mt-4 text-gray-400 text-sm">🔄 Refresh this page to get newest status about the Bot</p>
     </section>
 
     <!-- Features -->
